# used-car-price-prediction

./: .gitignore  README.md  main.py  pyproject.toml
app/: ui.py
data/processed/: processed_data_sample.csv  processed_data_stats.csv
models/: brand_price_map.joblib  label_encoders.joblib  model_results.csv  scaler.joblib  test_metrics.json  training_metadata.joblib
results/figures/: cleaned_data_sample.csv  correlation_matrix.csv  missing_values_summary.csv
results/metrics/: feature_importance.csv  feature_importance_table.csv  feature_selection_comparison.csv  model_results.csv
src/: base.py  data_loader.py  data_preparation.py  evaluate.py  evaluation.py  feature_engineering.py  model_training.py  predict.py  preprocessing.py  train.py  utils.py
